--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "framer-syntax",
   "theme": "syntax",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A syntax theme inspired by Framer’s popular code editor.",
-  "keywords": ["syntax", "theme"],
+  "keywords": [
+    "syntax",
+    "theme"
+  ],
   "repository": "https://github.com/framer/syntax-atom",
   "license": "MIT",
   "engines": {
